# commandz

./: .gitignore  README.md  docker-compose.yml
axum-backend/: .env  Cargo.toml  README.md
axum-backend/src/: lib.rs  main.rs  routes.rs
reqwest-client/: .env  Cargo.toml  request.json
reqwest-client/src/: arguments.rs  main.rs  utils.rs
reqwest-client/src/routes/: command.rs  mod.rs
