[package]
name = "reqwest_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }
reqwest = { version = "0.11.16", features = ["json"] }
tokio = { version = "1.27.0", features = ["full"] }
clap = { version = "4.2.2", features = ["derive"] }
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
serde_json = "1.0.96"
dialoguer = "0.10.4"
